[BACKLOG-39648] Dashboard interface is cropped on the right side - Fix tab-width when Solution Browser is present - Ensure fix works when SolutionBrowser isn't present and hasn't loaded

--- a/user-console/src/main/resources/org/pentaho/mantle/public/themes/ruby/mantleRuby.css
+++ b/user-console/src/main/resources/org/pentaho/mantle/public/themes/ruby/mantleRuby.css
@@ -1780,7 +1780,6 @@ hr {
 
 .panelWithTitledToolbar .pentaho-tab-bar {
   display: flex;
-  width: 100vw;
   overflow-x: auto;
   scrollbar-width: thin;
   overflow-y: hidden;
